# libwannier90

./: .gitignore  README.md  setup.py
src/: CMakeLists.txt  Makefile
src/arch/: Makefile.macOS
wannier90-3.1.0/: make.inc  postw90.x  w90chk2chk.x  w90spn2spn.x  wannier90.x
wannier90-3.1.0/examples/example01/: gaas.chk  gaas.wout
wannier90-3.1.0/src/objp/: w90_berry.mod  w90_boltzwann.mod  w90_constants.mod  w90_dos.mod  w90_geninterp.mod  w90_get_oper.mod  w90_gyrotropic.mod  w90_kmesh.mod  w90_kpath.mod  w90_kslice.mod  w90_parameters.mod  w90_postw90_common.mod  w90_spin.mod  w90_wan_ham.mod  w90_ws_distance.mod
wannier90-3.1.0/utility/w90pov/: general.mod  m_driver.mod  m_io.mod  w90pov
wannier90-3.1.0/utility/w90vdw/: w90vdw.x
wannier90-3.1.0/utility/w90vdw/w90vdw.x.dSYM/Contents/: Info.plist
wannier90-3.1.0/utility/w90vdw/w90vdw.x.dSYM/Contents/Resources/DWARF/: w90vdw.x
wannier90-3.1.0/utility/w90vdw/w90vdw.x.dSYM/Contents/Resources/Relocations/aarch64/: w90vdw.x.yml
